# oxc

./: Cargo.toml  pnpm-lock.yaml
.cargo/: config.toml
apps/oxfmt/: Cargo.toml  package.json
apps/oxfmt/src/: format.rs  lib.rs  napi.rs  service.rs
apps/oxfmt/src-js/: cli.ts  embedded.ts  index.ts
apps/oxfmt/src/prettier_plugins/: external_formatter.rs  mod.rs
apps/oxfmt/test/: e2e.test.ts  test-callback-count.mjs  test-debug.mjs  test-error-check.mjs  test-format-output.mjs  test-manual-call.mjs  test-prettier-direct.mjs  test-prettier.mjs  utils.ts
apps/oxfmt/test/fixtures/check_mode/files/: index.js
apps/oxfmt/test/fixtures/embedded_graphql/files/: index.js
apps/oxfmt/test/fixtures/embedded_languages/: check.snap.md  output.snap.md
apps/oxfmt/test/fixtures/embedded_languages/files/: css.js  html.js  (+5 more)
apps/oxfmt/test/fixtures/unsupported_tag/: output.snap.md
apps/oxlint/src-js/: cli.ts
apps/oxlint/test/lsp/lint/: lint.test.ts
crates/oxc_formatter/src/: embedded_formatter.rs  lib.rs
crates/oxc_formatter/src/write/: template.rs
crates/oxc_linter/: Cargo.toml
crates/oxc_linter/src/loader/: mod.rs  parse.rs
crates/oxc_linter/src/loader/partial_loader/: mod.rs
crates/oxc_linter/src/loader/transform_loader/: mod.rs
crates/oxc_linter/src/service/: runtime.rs
crates/oxc_parser/src/lexer/: mod.rs
crates/oxc_vue_parser/: Cargo.toml  README.md
crates/oxc_vue_parser/src/: lib.rs  parser.rs  semantic.rs  utils.rs
editors/vscode/tests/: ConfigService.spec.ts  code_actions.spec.ts  e2e_server_linter.spec.ts
napi/playground/src/: lib.rs
(+6 files in other folders)
