[package]
name = "oxc_vue_parser"
version = "0.107.0"
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = true

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_parser = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_span = { workspace = true }
oxc_diagnostics = { workspace = true }

vue-compiler-core = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
